# CHIN-YI-YONG-FYP-THESIS

./: .gitignore
Nanobind Linear PlaneWave/: README.md
Nanobind Linear PlaneWave/codes/example_01/: CMakeLists.txt  my_ex1.cpp
Nanobind Linear PlaneWave/codes/example_02/: CMakeLists.txt  my_ex2.cpp
Nanobind Linear PlaneWave/codes/example_04/: CMakeLists.txt  my_ex4.cpp
Nanobind Linear PlaneWave/codes/example_05/: CMakeLists.txt  my_ex5.cpp
Nanobind Linear PlaneWave/codes/example_06/: CMakeLists.txt  my_ex6.cpp
Nanobind Linear PlaneWave/codes/example_07/: my_ex7.hpp
Nanobind Linear PlaneWave/codes/example_08/: pyproject.toml
Nanobind Linear PlaneWave/codes/example_08/linear_planewave2d_1/output_final.bp/: profiling.json
Nanobind Linear PlaneWave/codes/example_08/src/: Linear.hpp  fusx.cpp
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/: CMakeLists.txt
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/linear_planewave2d_1/: linear_planewave2d_1.py
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/linear_planewave2d_1/data/: pressure_field_0.txt  pressure_field_1.txt  pressure_field_10.txt  pressure_field_11.txt  pressure_field_12.txt  pressure_field_13.txt  pressure_field_14.txt  pressure_field_15.txt  pressure_field_16.txt  pressure_field_17.txt  pressure_field_18.txt  pressure_field_19.txt  pressure_field_2.txt  pressure_field_20.txt  pressure_field_21.txt  pressure_field_22.txt  pressure_field_23.txt  pressure_field_24.txt  pressure_field_25.txt  pressure_field_26.txt  pressure_field_27.txt  pressure_field_28.txt  pressure_field_29.txt  pressure_field_3.txt  pressure_field_30.txt  pressure_field_31.txt  pressure_field_32.txt  pressure_field_33.txt  pressure_field_34.txt  pressure_field_35.txt  pressure_field_36.txt  pressure_field_37.txt  pressure_field_38.txt  pressure_field_39.txt  pressure_field_4.txt  pressure_field_40.txt  pressure_field_41.txt  pressure_field_42.txt  pressure_field_43.txt  pressure_field_5.txt  (+4 more)
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/linear_planewave2d_1/data_real/: pressure_field_final.txt
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/linear_planewave2d_1/output_final.bp/: md.0  profiling.json
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/linear_planewave2d_1/scenario1_small_output.bp/: md.0  profiling.json
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/linear_planewave2d_1/scenario2_large_output.bp/: profiling.json
codes/CHIN-YI-YONG-FYP-THESIS/codes/example_08/src/: Linear.hpp  forms.py  fusx.cpp
codes/Linear_Penetrable2D Python/: README.md  mesh.h5  mesh.xdmf
codes/Linear_Penetrable2D Python/linear_penetrable2d_1/: linear_penetrable2d_1.py
codes/Linear_Penetrable2D Python/src/: Linear.hpp  fusx.cpp
codes/Linear_Planewave2D Python/: .gitignore
codes/Linear_Planewave2D Python/linear_planewave2d_1/: auto_clipped_view.pvsm  custom_region.csv  demo_export_formats.py  demo_extended_features.py  demo_linear_vtx.py  linearPlanewave2D.py  linear_extended.py  output_with_region.bp_region.json
codes/Linear_Planewave2D Python/src/: Linear.hpp  fusx.cpp
codes/Linear_Planewave2D Python/src/fusx/: __init__.py
codes/Lossy_Planewave2D_Python/: CMakeLists.txt  Lossy_Planewave2D.py  README.md  pyproject.toml
codes/Lossy_Planewave2D_Python/output_final.bp/: md.0  profiling.json
codes/Lossy_Planewave2D_Python/src/: Linear.hpp  Lossy.hpp  Lossy.hpp.backup  forms.h  fusx.cpp  fusx.cpp.backup
codes/Lossy_Planewave2D_Python/src/fusx/: __init__.py
codes/Lossy_Planewave2D_Python/vtx_output/lossy_region.bp/: md.0  md.idx  profiling.json
codes/SC2-BM1_Python/src/: Linear.hpp  forms.c  forms.h  fusx.cpp  main.cpp  main.py
codes/SC2-BM1_Python/src/fusx/: __init__.py
codes/example_01/: my_ex1.cpp
codes/example_03/: CMakeLists.txt  my_ex3.cpp
codes/example_05/: my_ex5.cpp
codes/example_06/: my_ex6.hpp
codes/example_07/: CMakeLists.txt  my_ex7.cpp
codes/example_08/: CMakeLists.txt  Linear.cpp  Linear.hpp  linear_planewave2d_1.py  test.py  wrapper.cpp
codes/example_08/fusx/: Linear.hpp  wrapper.cpp
codes/example_08/fusx/wrapper/: __init__.py
codes/example_08/linear_planewave2d_1/: linear_planewave2d_1.py
codes/example_08/src/: Linear.hpp  forms.c  fusx.cpp
fenicsx-fus/: Linear.hpp
fenicsx-fus/permute/: CMakeLists.txt  permute.cpp  permute.hpp
