[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "fusx"
version = "0.1.0"
description = "FEniCSx Spectral Solver"
requires-python = ">=3.9"
dependencies = [
    "fenics-dolfinx>=0.9.0",
    "numpy",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/fusx"]
